--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -110,8 +110,12 @@ z-index: 9999 !important;
     display: inline-block;
 
 }
-.btn-option-in-task img{
+.btn-option-in-task{
+  display: inline-block !important;
+}
+.btn-option-in-task div img{
   margin-left: 1vw;
+
 }
 .last-update{
   text-align:right !important;
@@ -187,3 +191,9 @@ z-index: 9999 !important;
     width: 97%;
     /* margin-left: 2%; */
   }
+.assingto-task-hover{
+  display: none;
+}
+.files-task-hover{
+  display: none;
+}
