--- a/src/component/hub/toastDelete/toastDelete.css
+++ b/src/component/hub/toastDelete/toastDelete.css
@@ -4,17 +4,18 @@
     /* border-width: 3px; */
     /* border-style: solid; */
    /* border-image: linear-gradient(91deg, #44D7B6 0%, #329A80 100%)100% 1 1 1 !important;  */
-   border-top-color:#44D7B6  !important;
+   /* border-top-color:#44D7B6  !important; */
 border-top-width:medium !important ;
     margin-top: -9rem;
     margin-left: 6rem;
     /* width: 274px; */
     height: 65px;
-    background: #F5F5F5 0% 0% no-repeat padding-box!important;
-    background-color:#FFFFFF !important ;
+    /* background: #F5F5F5 0% 0% no-repeat padding-box!important; */
+    /* background-color:#FFFFFF !important ; */
     /* box-shadow: 0px 3px 6px #00000029;
     border-radius: 8px ; */
     opacity: 1;
+    background-image: url('../../img/toast-image.png');
   }
 
 .toast_header{
