--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -73,6 +73,10 @@
     border-radius: 5px;
     position: relative !important;
 }
+.task-card:hover{
+    border:1px solid #52C4A9!important;
+}
+
 .task-card p{
     color:black !important;
     font-size: medium;
