--- a/src/component/hub/contact/contact.css
+++ b/src/component/hub/contact/contact.css
@@ -149,13 +149,12 @@ body {
    color: #007bff;
 }
 .div_contacts{
-    width: 300px;
-    height: 450px;  
     background: white;
     position: absolute;
-    /* z-index: 0; */
-    top: 100px;
-   left:29px;
+    z-index: 999999999;
+    overflow-x: scroll;
+    /* top: 304px;
+   left:934px; */
    box-shadow: 0px 3px 6px #00000029;
 }
 .div_contacts_list{
@@ -165,7 +164,9 @@ body {
     }
     .invite-contact{
         background-color:#f7f5f5 !important;
-margin-bottom: 2vh !important;
+margin-top: 2vh !important;
+/* margin-bottom: 2vh !important; */
+
     }
     /* .invite-btn{
         position: absolute;
