--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -26,3 +26,27 @@
   }
 
 }
+
+::-webkit-scrollbar {
+  background-color: #FFFFFF ;
+  width: 6px;
+}
+ 
+  /* Track */
+ ::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-track:hover {
+      box-shadow: inset 0 0 5px grey; 
+    }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb { 
+    border-radius: 15px;
+  }
+  
+  /* Handle on hover */
+  .body-workspace::-webkit-scrollbar-thumb:hover {
+    background: #919494; 
+  }
+  
