--- a/src/component/hub/tabs/tabs.css
+++ b/src/component/hub/tabs/tabs.css
@@ -1,6 +1,7 @@
 
 .body-cards{
       overflow-x: auto !important;
+      /* overflow-y: hidden !important; */
 }
 
 .wraperr-tabs >.row{
@@ -56,26 +57,24 @@ a .add-card-tabs{
 /* width */
 .body-cards::-webkit-scrollbar {
     background-color: #ffff;
-    /* width: 5px !important; */
     height: 10px;
   }
    
     /* Track */
     .body-cards::-webkit-scrollbar-track {
-      border-radius: 3px;
+      /* border-radius: 10px; */
     }
     .body-cards::-webkit-scrollbar-track:hover {
-
         box-shadow: inset 0 0 5px grey; 
       }
      
     /* Handle */
     .body-cards::-webkit-scrollbar-thumb { 
-       /* background: #44D7B6;  */
-      border-radius: 3px;
+      border-radius: 10px;
     }
     
     /* Handle on hover */
     ::-webkit-scrollbar-thumb:hover {
       background: #919494; 
     }
+    
