--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -212,8 +212,7 @@ border: none !important;
 }
 .dnd-icon{
   opacity: 0;
- 
-  
+margin-top: -10px !important;  
   /* display: none; */
 }
 .view-details-in-list{
