--- a/src/component/hub/project/shareProject/shareProject.css
+++ b/src/component/hub/project/shareProject/shareProject.css
@@ -33,3 +33,14 @@ color: #75798E;
 .row_btn_share{
     float: right;
 }
+.div_choose_team{
+    background: #EDF8F6 0% 0% no-repeat padding-box;
+border-radius: 3px;
+width: 21vw;
+height: 5vh;
+color: #75798E;
+text-align: left;
+}
+.select_permission{
+height: 5vh;
+}
