--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -22,11 +22,11 @@
 }
 
 .input-group-task-not-belongs{
-    width: 100%;
-    margin: 3%; 
+    width: 96%;
+    margin: 3%;
     margin-bottom: 1%;
-    margin-left: 0px;
-    margin-right: 0px
+    margin-left: 2%;
+    margin-right: 1%;
 }
 
 .hrInSelect{
@@ -133,8 +133,8 @@ display: inline-block;
     border-bottom-right-radius: 50rem !important;
     transition: width 2s;
     height: 32px;
-    margin-right: -42px;
-    margin-right: 10px;
+    /* margin-right: -42px; */
+    /* margin-right: 10px; */
     background: url(../../../img/imge_search.png) no-repeat #c5ccca47 ;
     background-size: contain;
 
