--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -12,7 +12,7 @@
 }
 .card-width{
   width: 36vh !important;
-  display: inline-block !important; 
+  display: inline-block ; 
 }
 .card-body {
   padding: 1rem !important;
