--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -24,3 +24,23 @@
     display:none;
 } */
 
+.status-task-tabs{
+    color:white;
+    border-radius: 3px;
+    text-align: center;
+    font-weight: 300;
+    opacity: 0.7;
+    width: 53px;
+    height: 22px;
+    /* font-weight: 400; */
+
+  }
+  .icons-task-tabs > img{
+      margin-left: 5px;
+  }
+  @media screen and (min-width: 1000px) {
+    .icons-task-tabs{
+        margin-left:76px ;
+    }
+  }
+  
