--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -17,12 +17,12 @@
 }
 
 .betweenHeaderProjects{
-    margin-top: 18px;
-    margin-right: 19px !important;
+    margin-top: 7px;
+    margin-right: 11px !important;
     justify-content: space-between;
     display: flex;
-    margin-left: 25px;
-    border-bottom: 1px solid #75798E;
+    margin-left: 2px;
+    /* border-bottom: 1px solid #75798E; */
     height: 54px;
 }
 
