--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -75,7 +75,7 @@
     text-align: center;
 }
 p{ 
-    color:#98A9BC !important;
+    /* color:#98A9BC !important; */
     margin-bottom: 0 !important;
     
 }
