--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -117,7 +117,7 @@
 }
 
 .saveSelectActive:hover{
-    background-color: #2f85d6 !important;
+    background-color: #007d82 !important;
 }
 .inputSearchTask{
     border-top-left-radius: 50rem !important;
