--- a/src/component/hub/team/style.css
+++ b/src/component/hub/team/style.css
@@ -25,9 +25,9 @@ body {
   margin-left: 0 !important;
 }
 
-.css-tlfecz-indicatorContainer{
+/* .css-tlfecz-indicatorContainer{
   display:none !important;
-}
+} */
 
 .viewer{
   border: #007bff solid 1px;
