--- a/src/component/hub/hub.css
+++ b/src/component/hub/hub.css
@@ -33,5 +33,10 @@
       
     
       
-    
+    .calender-tabs{
+        z-index: 9999999; 
+        position: relative;  
+        /* top:100px;
+        left:100px */
+    }
     
