--- a/src/component/hub/contact/contact.css
+++ b/src/component/hub/contact/contact.css
@@ -19,10 +19,10 @@ body {
   height: 100vh;
 } */
 .thumbnail-contact{
-  width:30px;
-  height:30px;
+  width:25px;
+  height:25px;
   border-radius:50%;
-  margin-left: 0 !important;
+  display: inline-block;
 }
 
 .css-tlfecz-indicatorContainer{
@@ -133,16 +133,17 @@ body {
   border:0 !important;
   outline: none !important;
 }
-.logo-contact{
 
+.logo-contact{
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   color:white;
-  display:inline-block;
+  /* display:inline-block; */
   text-align: center;
-  font-size:18px !important;
+  font-size:16px !important;
 }
+
 .choose:focus{
   border: #007bff 2px solid;
    background: white;
