--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -22,6 +22,9 @@
   background-color:  #EDFBFC  !important;
 
 }
+span:focus{
+  outline: 0!important;
+}
 #input-card-name{
   font-size: medium;
   font-weight: bold !important;
@@ -68,7 +71,7 @@
   /* padding-right: 5px !important;
   padding-left: 5px !important; */
 
-  margin-bottom: 9px;
+  /* margin-bottom: 9px; */
 }
 .allTaskInCard div:hover{
   border-color:#52C4A9  !important;
@@ -81,16 +84,15 @@
 .task-card{
   padding-top: 5px !important;
     background-color: white;
-    height: 115px;
+    min-height: 95px;
+    /* height: 115px; */
     border-radius: 5px;
     position: relative !important;
 }
 .task-card:hover{
     border:1px solid #52C4A9!important;
 }
-
 .task-card input{
-
   margin-top:20px !important; 
 
 }
