--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -32,10 +32,10 @@
 }
 .logoGif{
   /* margin-top: -5vh; */
-  margin-left: auto !important;
+  /* margin-left: auto !important;
   width: 10vh !important;
-  height: 5vh !important;
-}
+  height: 5vh !important;*/
+} 
  
   
   
