--- a/src/component/hub/uploadFile/file/file.css
+++ b/src/component/hub/uploadFile/file/file.css
@@ -11,13 +11,22 @@
 .imgFileInTask img
 {
     height: 64px;
-    width: 75px;
+    width: 75px !important;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 8px;
     padding-right: 4px;
 }
-
+.fontAwesomeIconFile
+{
+    height: 64px;
+    width: 75px !important;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 32px;
+    padding-right: 4px;
+    color:red
+}
 .nameFileInTask{
     text-align: left;
     font: normal normal medium 13px/15px Roboto;
