--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -1,29 +1,23 @@
 .task-card{
     cursor: pointer;
 }
-.more {
-    /* width: 250px; */
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    /* text-align: center; */
+.more-task {
+    float: right;
   }
   .MuiButton-label-text {
-   
-    
-      /* display: none !important ; */
+      
   }
 
-.check-task input:hover ~ .checkmark{
+/* .check-task input:hover ~ .checkmark{
     background-color:#f6f7f8 !important;
-}
+} */
+
 .task-name-span{
     text-indent: 5vh !important;
 }
 /* .input-card-name{
     height: 65vh !important;
-}
-.delete-task-hover{
-    display:none;
-} */
+}*/
 
 .status-task-tabs{
     color:white;
