--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -23,10 +23,10 @@
     color:white;
     border-radius: 3px;
     text-align: center;
-    font-weight: 300;
+    /* font-weight: 300; */
     opacity: 0.7;
-    width: 53px;
-    height: 22px;
+   max-width: 110px;
+    /* height: 22px; */
     /* font-weight: 400; */
 
   }
