design select in order place

--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -1,5 +1,5 @@
 .wrap-input{
-    border:2px solid #1FB9C1;
+    border:1px solid #1FB9C1;
     border-radius: 8px !important; 
     margin-bottom: 2px;
     margin-top: 2px;
@@ -10,33 +10,21 @@
     background-position:left ;
     padding-left: 20px  !important;
     border: none;
-    width: 95%;
+    width: 94%;
 }
-.wrap-input:focus,.wrap-input:hover{
+/* .wrap-input:focus,.wrap-input:hover{
     border:2px solid #07a3ac !important;
     border-radius: 8px !important; 
-}
+} */
 .addTaskNotBelong:focus,.addTaskNotBelong:hover{
-    outline: none;
+    outline: none !important;
 }
 .close-add-task{
     margin-bottom: 2px;
     background-color: transparent;
     color: #C4CCD5;
 }
-.input-group-task-not-belongs1{
 
-     /* z-index: 9999;
-    position: fixed;
-    background: white;
-    overflow: hidden;
-    width: 81vw;
-    margin-left: 2vh;
-    padding-left: 0px;
-    height: 20vh;
-    min-height: 112px !important; */
-
-}
 
 .input-group-task-not-belongs{
     width: 100%;
@@ -74,8 +62,7 @@
 
  .selectWorkspaceInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row,
  .selectProjectInTasksNotBelong  .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row,
- .selectCardInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row
- {
+ .selectCardInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row{
     margin-right: 0px;
     margin-left: 0px;
     -webkit-line-clamp: 1;
@@ -96,6 +83,9 @@
     background: url(../../../img/down-arrow.svg) no-repeat ;
     background-size: 10px 10px;
     background-position: 90%;
+}
+.css-yk16xz-control .css-g1d714-ValueContainer{
+  justify-content: start !important;
 }
 /* .selectPlaceHorder{
     width: 80%;
@@ -222,7 +212,7 @@ font: normal normal bold 14px/19px Roboto;
 letter-spacing: 0px;
 color: #68C7CB;
 text-transform: capitalize;
-padding-left: 59px;
+/* padding-left: 59px; */
 }
 
 .headerTableTask{
@@ -277,3 +267,9 @@ inner-addon {
 .propertiesAllTask {
     text-align: center !important;
 }
+
+@media only screen and (max-width: 700px) {
+    .input-group-task-not-belongs{
+      width: fit-content !important;
+    }
+  }
