--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body{
 button{
   outline: 0 !important;
   border: none !important;
+  cursor: pointer !important;
 }
 :root {
   --lighat-blue: #1e90ff;
