--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -1,5 +1,5 @@
 .body{
-  height: 75.7vh;
+  /* height: 75vh; */
   background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;  
@@ -10,7 +10,7 @@
   }
   @media screen and (min-width: 1550px) {
     .body {
-      height: 83vh;
+      height: 87.7vh;
     }
     .card{
       /* height:75vh !important; */
