--- a/src/component/hub/contact/contact.css
+++ b/src/component/hub/contact/contact.css
@@ -165,11 +165,13 @@ body {
     }
 .invite-button{
   border-radius: 3px;
-background-color: #ebe6e6;
+background-color: #b6f6f8;
 font-size: smaller ;
 color: #B2B2B2;
 height:35px;
 text-align:left;
+color:#68C7CB;
+
 /* display: inline-block; */
 }
 .div_contacts_list > .form-group{
