--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -36,7 +36,7 @@
     height: auto;
     overflow: auto;
     min-height: 20vh;
-    width: 97%;
+    /* width: 97%; */
     /* margin-left: 2%; */
   }
 
