--- a/src/component/hub/newBody/newBody.css
+++ b/src/component/hub/newBody/newBody.css
@@ -1,7 +1,7 @@
-/* .body{
+.body{
     height: 70vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;
 
-  } */
+  }
