--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -37,7 +37,7 @@ overflow-y: auto;
 }
 @media screen and (min-width: 1550px) {
   #descriptionProject{
-    height:250px
+    /* height:250px */
   }
 
 }
