--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -138,6 +138,10 @@ label{
   margin: auto;
 
 } */
+.likes-num{
+ color: #68C7CB!important;
+ display: inline-block;
+}
 .status-task{
 
   border-radius: 3px;
