--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -5,17 +5,14 @@
     margin-top: 2px;
 }
 .addTaskNotBelong{
-    background: url(../../../img/check-mark.svg) no-repeat ;
+    /* background: url(../../../img/check-mark.svg) no-repeat ;
     background-size: 18px 18px;
     background-position:left ;
-    padding-left: 20px  !important;
+    padding-left: 20px  !important; */
     border: none;
     width: 94%;
 }
-/* .wrap-input:focus,.wrap-input:hover{
-    border:2px solid #07a3ac !important;
-    border-radius: 8px !important; 
-} */
+
 .addTaskNotBelong:focus,.addTaskNotBelong:hover{
     outline: none !important;
 }
@@ -75,9 +72,12 @@
     padding-left: 0px !important;
 }
 
-.selectWorkspaceInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row
+/* .selectWorkspaceInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row
 {
-    /* margin-left: -7px; */
+    margin-left: -7px;
+} */
+.wrap-not-belong .check-task{
+    padding-top:unset !important;
 }
 .check-task .css-yk16xz-control{
     background: url(../../../img/down-arrow.svg) no-repeat ;
@@ -180,9 +180,7 @@
 .inputSearchTask {transition-timing-function: ease-in-out;}
 
 
-#buttonCancleSelect{
-    /* display: none; */
-}
+  
 
 #selectProjectInAllTask{
     display: none;
@@ -207,22 +205,22 @@
 }
 
 .propertiesAllTask{ 
-text-align: left;
-font: normal normal bold 14px/19px Roboto;
-letter-spacing: 0px;
-color: #68C7CB;
-text-transform: capitalize;
-/* padding-left: 59px; */
+    text-align: left;
+    font: normal normal bold 14px/19px Roboto;
+    letter-spacing: 0px;
+    color: #68C7CB;
+    text-transform: capitalize;
+    padding-left: 59px;
 }
-
+.btn-open-details .svg-inline--fa{
+    vertical-align:-0.2em !important ;
+}
 .headerTableTask{
     background: #68c7cb1a  0% 0% no-repeat padding-box !important;
-    width: 100%;
+    /* width: 100%; */
 }
 
-.allTasks{
-    /* margin-top:21vh !important; */
-}
+
 .nameTaskNotBelong{
     text-align: left !important;
     text-overflow: ellipsis;
