--- a/src/component/hub/project/viewProject/viewProject.css
+++ b/src/component/hub/project/viewProject/viewProject.css
@@ -36,6 +36,8 @@
 .iconsProjectInLine{
     width: 15%!important;
 }
+
+
 .stripeActionsProject{
     display: inline-block;
     margin-left: 7px;
@@ -76,29 +78,28 @@
     line-height: 0;
     font-size: .75rem;
     background-color: #e9ecef;
-  
     border-radius: .25rem;
     width:  10vw !important; 
-    /* height: 5px; */
     height: 9px;  
-    
 }
 .progressProject-bar {
     border-radius: 4px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     overflow: hidden;
     color: #fff;
     text-align: center;
+    flex-direction: column;
     white-space: nowrap;
     transition: width .6s ease;
 }
 .projectForWorkspace{
     cursor: pointer ;
+    transition: width .9s ease;
+
 }
 .projectForWorkspace:hover{
-    background-color: rgba(0,0,0,.075);
+    background-color: #08080808;
 }
 
 .ddd{
