--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -8,7 +8,7 @@ height:93.8vh;
 top:0;
 right: 0;
 z-index: 999;
-border-left: 9px solid  #329A80  ;
+border-left: 9px solid   hsla(178, 51%, 41%, 1)  ;
 margin-right: 1.8rem !important;
 overflow-x: hidden !important;
 }
