--- a/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
@@ -20,11 +20,10 @@ h3{
 }
 .wrapLink{
     background-color: #EDFBFC ;
-   
      text-align: center;
 }
 .wrapLink a{
-       color: black;
+       color: #707070;
        text-decoration: none; 
        cursor: pointer;
 }
@@ -52,6 +51,7 @@ h3{
  .fileItem{
      border: gray;
      box-shadow: gray 1px 1px 1px 1px;
+     cursor: pointer;
  }
  .fileItem:hover{
     box-shadow: gray 2px 2px 2px 2px;
@@ -146,12 +146,14 @@ h3{
     /* position: absolute; */
     margin: 0vw;
     padding: 0;
+     cursor: pointer;
+     background-color: #707070;
   }
   /* Hide the browser's default checkbox */
   .selectFile input {
     position: absolute;
     opacity: 0;
-    cursor: pointer;
+   
   width: 0;
   height: 0;
   }
@@ -159,12 +161,12 @@ h3{
   /* Create a custom checkbox */
   .checkmarkFile {
     position: absolute;
-    height: 10%;
-    width: 10%;
-    background-color: #FFFFFF;
-    border: 1px solid #C4CCD5;
+    height: 1em;
+    width: 1em;
+    background-color: #fff;
+    border: 1px solid #fff;
         border-radius: 30%;
-   
+   opacity: 0.8;
   }
   /* .checkmarkFile-tabs{
     left: 6% !important;
@@ -184,17 +186,29 @@ h3{
   .selectFile input:checked .checkmarkFile::before {
     background-color:rgb(79, 216, 186);
     content: "\2713";
+    opacity: 1;
   }
   
   /* Create the checkmarkFile/indicator (hidden when not checked) */
   .checkmarkFile:after {
     content: "";
     position: absolute;
+    opacity:1;
     /* display: none; */
   }
   
   /* Show the checkmarkFile when checked */
   .selectFile input:checked ~ .checkmarkFile:after {
     display: block;
-  
+    background-color:#38B1B5 ;
+    content: "\2713";
+    font-size:0.9vw;
+    font-weight: bolder;
+    color: white;
+    width:-webkit-fill-available;
+    height: -webkit-fill-available;
+    opacity: 1;
+    border-radius: 30%;
+    transition: 0.2s;
+   
   }
